--- a/WpfRestaurant/MainWindow.xaml
+++ b/WpfRestaurant/MainWindow.xaml
@@ -5,8 +5,50 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfRestaurant"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="429.175" Width="932.827" WindowState="Maximized">
     <Grid>
-        
+        <DockPanel>
+            <DockPanel DockPanel.Dock="Top">
+                <StackPanel DockPanel.Dock="Left"  Height="45" Orientation="Horizontal">
+                    <TextBlock FontSize="24" VerticalAlignment="Center" TextAlignment="Center" Width="200">哇哈哈餐厅</TextBlock>
+                </StackPanel>
+                <StackPanel DockPanel.Dock="Right" Orientation="Horizontal">
+                    <TextBlock Margin="0,0,50,0" VerticalAlignment="Center">2017-1-4 09:50:29</TextBlock>
+                    <Image Source="pic/s_head.png" Height="30" Margin="0,0,50,0"></Image>
+                    <TextBlock Margin="0,0,50,0" VerticalAlignment="Center">小王</TextBlock>
+                    <Image Source="pic/ring.png" Height="30"></Image>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="pic/refresh.png" Height="30"/>
+                </StackPanel>
+            </DockPanel>
+            <DockPanel DockPanel.Dock="Left" Width="200">
+                <StackPanel DockPanel.Dock="Bottom">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Margin="5,0">占用中</TextBlock>
+                        <TextBlock Margin="5,0">0</TextBlock>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Margin="5,0">空闲中</TextBlock>
+                        <TextBlock Margin="5,0">20</TextBlock>
+                    </StackPanel>
+                </StackPanel>
+                <TreeView FontSize="20" Margin="0" Width="200">
+                    <TreeViewItem Header="大厅"/>
+                    <TreeViewItem Header="小包间"/>
+                    <TreeViewItem Header="大包间"></TreeViewItem>
+                    <TreeViewItem Header="全部桌台"></TreeViewItem>
+                </TreeView>
+            </DockPanel>
+            <Frame DockPanel.Dock="Right" Width="330" Background="#FFD7D7D7"></Frame>
+            <DockPanel>
+                <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
+                    <Button Width="120" Height="60">堂点</Button>
+                    <Button Width="120">预订</Button>
+                    <Button Width="120">外卖</Button>
+                </StackPanel>
+                <Frame x:Name="PageFrame"></Frame>
+            </DockPanel>
+        </DockPanel>
     </Grid>
 </Window>
