--- a/WpfRestaurant/MainWindow.xaml
+++ b/WpfRestaurant/MainWindow.xaml
@@ -23,14 +23,14 @@
                 </StackPanel>
             </DockPanel>
             <DockPanel DockPanel.Dock="Left" Width="200">
-                <StackPanel DockPanel.Dock="Bottom">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Margin="5,0">占用中</TextBlock>
-                        <TextBlock Margin="5,0">0</TextBlock>
+                <StackPanel DockPanel.Dock="Bottom" Height="80" HorizontalAlignment="Center">
+                    <StackPanel Orientation="Horizontal" Height="40">
+                        <TextBlock Margin="5,0" VerticalAlignment="Center">占用中</TextBlock>
+                        <TextBlock Margin="5,0" VerticalAlignment="Center">0</TextBlock>
                     </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Margin="5,0">空闲中</TextBlock>
-                        <TextBlock Margin="5,0">20</TextBlock>
+                    <StackPanel Orientation="Horizontal" Height="40">
+                        <TextBlock Margin="5,0" VerticalAlignment="Center">空闲中</TextBlock>
+                        <TextBlock Margin="5,0" VerticalAlignment="Center">20</TextBlock>
                     </StackPanel>
                 </StackPanel>
                 <TreeView FontSize="20" Margin="0" Width="200">
@@ -40,7 +40,7 @@
                     <TreeViewItem Header="全部桌台"></TreeViewItem>
                 </TreeView>
             </DockPanel>
-            <Frame DockPanel.Dock="Right" Width="330" Background="#FFD7D7D7"></Frame>
+            <Frame x:Name="SidebarFrame" DockPanel.Dock="Right" Width="330" Background="#FFD7D7D7" NavigationUIVisibility="Hidden"></Frame>
             <DockPanel>
                 <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
                     <Button Width="120" Height="60">堂点</Button>
