--- a/WpfRestaurant/AppointPage.xaml
+++ b/WpfRestaurant/AppointPage.xaml
@@ -1,76 +1,21 @@
-﻿<Page x:Class="WpfRestaurant.LobbyOrderPage"
+﻿<Page x:Class="WpfRestaurant.AppointPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:WpfRestaurant"
-      mc:Ignorable="d"
-      Title="LobbyOrderPage">
+      mc:Ignorable="d" 
+      d:DesignHeight="300" d:DesignWidth="643.129"
+      Title="AppointPage">
+
     <Grid>
-        <StackPanel>
-            <ItemsControl x:Name="BusyTableList">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <WrapPanel></WrapPanel>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Width="190" Height="90" Margin="10" MouseLeftButtonUp="StackPanel_MouseLeftButtonUp" Tag="{Binding No}">
-                            <StackPanel.Background>
-                                <ImageBrush ImageSource="pic/blue_button.png"/>
-                            </StackPanel.Background>
-                            <StackPanel Orientation="Horizontal">
-                                <StackPanel Width="80" Height="90" Orientation="Horizontal">
-                                    <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White" Text="{Binding No}"/>
-                                </StackPanel>
-                                <StackPanel Width="110">
-                                    <StackPanel Margin="0,15,0,0">
-                                        <TextBlock HorizontalAlignment="Center" Foreground="#FF8F92FF" FontSize="20" Text="{Binding Status}"/>
-                                    </StackPanel>
-                                    <StackPanel>
-                                        <StackPanel Orientation="Horizontal">
-                                            <Image x:Name="paid_pic" Source="pic/paid_0.png" Width="30">
-                                            </Image>
-                                            <TextBlock VerticalAlignment="Center" FontSize="20">￥40.0</TextBlock>
-                                        </StackPanel>
-                                    </StackPanel>
-                                </StackPanel>
-                            </StackPanel>
-                        </StackPanel>
-                        <DataTemplate.Triggers>
-                            <DataTrigger Binding="{Binding Path=Paid}" Value="1">
-                                <Setter TargetName="paid_pic" Property="Source" Value="pic/paid_1.png"></Setter>
-                            </DataTrigger>
-                        </DataTemplate.Triggers>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-            <ItemsControl x:Name="FreeTableList">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <WrapPanel></WrapPanel>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Width="190" Height="90" Margin="10" MouseLeftButtonUp="StackPanel_MouseLeftButtonUp_1" Tag="{Binding No}">
-                            <StackPanel.Background>
-                                <ImageBrush ImageSource="pic/green_button.png"/>
-                            </StackPanel.Background>
-                            <StackPanel Orientation="Horizontal">
-                                <StackPanel Width="80"  Height="90" Orientation="Horizontal">
-                                    <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White" Text="{Binding No}"/>
-                                </StackPanel>
-                                <StackPanel Width="110" Orientation="Horizontal" VerticalAlignment="Center" Height="90">
-                                    <TextBlock TextAlignment="Center" Width="110" FontSize="20" Foreground="Lime" VerticalAlignment="Center" Text="{Binding Status}"/>
-                                </StackPanel>
-                            </StackPanel>
-                        </StackPanel>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-           
+        <DockPanel>
+            <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" >
+                <Button Width="150" Height="40" Margin="5">半小时内开餐</Button>
+                <Button Width="150" Height="40" Margin="5">一小时内开餐</Button>
+                <Button Width="150" Height="40" Margin="5">二小时内开餐</Button>
+                <Button Width="150" Height="40" Margin="5">全部预约单</Button>
+            </StackPanel>
             <WrapPanel>
                 <StackPanel Width="190" Height="90" Margin="10">
                     <StackPanel.Background>
@@ -129,6 +74,6 @@
                     </StackPanel>
                 </StackPanel>
             </WrapPanel>
-        </StackPanel>
+        </DockPanel>
     </Grid>
 </Page>
