--- a/WpfRestaurant/SetUpPage.xaml
+++ b/WpfRestaurant/SetUpPage.xaml
@@ -4,7 +4,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:WpfRestaurant"
-      mc:Ignorable="d" d:DesignWidth="300"
+      mc:Ignorable="d" d:DesignWidth="400
+      "
       Title="SetUpPage">
 
     <Grid>
@@ -17,17 +18,20 @@
                     <StackPanel>
                         <Border BorderBrush="White" BorderThickness="2" CornerRadius="10" Margin="0,5">
                             <StackPanel Orientation="Horizontal" Width="360" Height="55">
-                                <TextBox Text="HTTP接口地址" Background="Transparent" Foreground="White" VerticalAlignment="Center" Width="285" BorderBrush="#00ABADB3"/>
+                                <TextBlock Width="80" Text="HTTP接口地址" VerticalAlignment="Center" TextAlignment="Right" Margin="5,0" Foreground="White"></TextBlock>
+                                <TextBox Background="Transparent" Foreground="White" VerticalAlignment="Center" Width="260" BorderBrush="#00ABADB3" Margin="5,0"/>
                             </StackPanel>
                         </Border>
                         <Border BorderBrush="White" BorderThickness="2" CornerRadius="10" Margin="0,5">
                             <StackPanel Orientation="Horizontal" Height="55" Width="360">
-                                <TextBox Text="TCP IP地址" Background="Transparent" Foreground="White" VerticalAlignment="Center" Width="285" BorderBrush="#00ABADB3"></TextBox>
+                                <TextBlock Width="80" Text="TCP IP地址" VerticalAlignment="Center" TextAlignment="Right" Margin="5,0" Foreground="White"></TextBlock>
+                                <TextBox Background="Transparent" Foreground="White" VerticalAlignment="Center" Width="260" BorderBrush="#00ABADB3" Margin="5,0"/>
                             </StackPanel>
                         </Border>
                         <Border BorderBrush="White" BorderThickness="2" CornerRadius="10" Margin="0,5">
                             <StackPanel Orientation="Horizontal" Height="55" Width="360">
-                                <TextBox Text="TCP端口" Background="Transparent" Foreground="White" VerticalAlignment="Center" Width="285" BorderBrush="#00ABADB3"></TextBox>
+                                <TextBlock Width="80" Text="TCP 端口" VerticalAlignment="Center" TextAlignment="Right" Margin="5,0" Foreground="White"></TextBlock>
+                                <TextBox Background="Transparent" Foreground="White" VerticalAlignment="Center" Width="260" BorderBrush="#00ABADB3" Margin="5,0"/>
                             </StackPanel>
                         </Border>
                     </StackPanel>
