--- a/WpfRestaurant/OrderPage.xaml
+++ b/WpfRestaurant/OrderPage.xaml
@@ -29,12 +29,12 @@
                     <Button Width="100" Margin="5">小票补打</Button>
                 </StackPanel>
                 <StackPanel>
-                    <DataGrid AutoGenerateColumns="False" IsReadOnly="True">
+                    <DataGrid x:Name="BillDataGrid" AutoGenerateColumns="False" IsReadOnly="True">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="序号" Width="*"></DataGridTextColumn>
-                            <DataGridTextColumn Header="菜品" Width="*"></DataGridTextColumn>
-                            <DataGridTextColumn Header="数量" Width="*"></DataGridTextColumn>
-                            <DataGridTextColumn Header="价格(元)" Width="*"></DataGridTextColumn>
+                            <DataGridTextColumn Header="序号" Width="*" Binding="{Binding Path=Food.Id}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="菜品" Width="*" Binding="{Binding Path=Food.Name}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="数量" Width="*" Binding="{Binding Num}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="价格(元)" Width="*" Binding="{Binding Price}"></DataGridTextColumn>
                         </DataGrid.Columns>
                     </DataGrid>
                 </StackPanel>
